--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <sticky.header.tableview.stickyheadertableview.StickyHeaderTableView
+        android:id="@+id/stickyHeaderTableView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:shtv_cellPadding="10dp"
+        app:shtv_contentCellFillColor="@color/contentCellFillColor"
+        app:shtv_dividerColor="@color/lineDividerColor"
+        app:shtv_dividerThickness="1dp"
+        app:shtv_headerCellFillColor="@color/headerCellFillColor"
+        app:shtv_is2DScrollEnabled="true"
+        app:shtv_isDisplayLeftHeadersVertically="true"
+        app:shtv_isWrapHeightOfEachRow="true"
+        app:shtv_isWrapWidthOfEachColumn="true"
+        app:shtv_textHeaderColor="@color/textHeaderColor"
+        app:shtv_textHeaderSize="18dp"
+        app:shtv_textLabelColor="@color/textLabelColor"
+        app:shtv_textLabelSize="14dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
