--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="lineDividerColor">#B7B4B4</color>
+    <color name="textLabelColor">#3F51B5</color>
+    <color name="textHeaderColor">#FF4081</color>
+    <color name="headerCellFillColor">#d8d8d8</color>
+    <color name="contentCellFillColor">#efefef</color>
+
 </resources>
