--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,47 @@
         app:shtv_isWrapHeightOfEachRow="true"
         app:shtv_isWrapWidthOfEachColumn="true"
         app:shtv_textHeaderColor="@color/textHeaderColor"
-        app:shtv_textHeaderSize="18dp"
+        app:shtv_textHeaderSize="16sp"
         app:shtv_textLabelColor="@color/textLabelColor"
-        app:shtv_textLabelSize="14dp" />
+        app:shtv_textLabelSize="14sp" />
+
+    <!--<ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:background="@color/black" />
+
+            <sticky.header.tableview.stickyheadertableview.StickyHeaderTableView
+                android:id="@+id/stickyHeaderTableView"
+                android:layout_width="match_parent"
+                android:layout_height="600dp"
+                app:shtv_cellPadding="10dp"
+                app:shtv_contentCellFillColor="@color/contentCellFillColor"
+                app:shtv_dividerColor="@color/lineDividerColor"
+                app:shtv_dividerThickness="1dp"
+                app:shtv_headerCellFillColor="@color/headerCellFillColor"
+                app:shtv_is2DScrollEnabled="true"
+                app:shtv_isDisplayLeftHeadersVertically="true"
+                app:shtv_isWrapHeightOfEachRow="true"
+                app:shtv_isWrapWidthOfEachColumn="true"
+                app:shtv_textHeaderColor="@color/textHeaderColor"
+                app:shtv_textHeaderSize="16sp"
+                app:shtv_textLabelColor="@color/textLabelColor"
+                app:shtv_textLabelSize="14sp" />
+        </LinearLayout>
+
+    </ScrollView>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
